<resources>

    <string name="app_name">好家之星</string>
    <string name="back">返回</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="find_pwd">找回密码</string>
    <string name="map">地图</string>
    <string name="edit">编辑</string>
    <string name="remark">备        注：</string>
    <string name="change">修改密码</string>
    <string name="hotel_default">默认</string>
    <string name="hotel_price">价格</string>
    <string name="hotel_distance">距离</string>
    <string name="enshrine">收藏</string>
    <string name="favorable_info_title">优惠活动详情</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_name">您的姓名：</string>
    <string name="feedback_mobile">您的手机：</string>
    <string name="feedback_email">您的邮箱：</string>
    <string name="feedback_content">您的建议：</string>
    <string name="set">更多设置</string>
    <string name="login_uname">账号：</string>
    <string name="login_uname_hint">手机/卡号/邮箱</string>
    <string name="login_pass">密码：</string>
    <string name="regist_mobile">手机：</string>
    <string name="regist_name">姓名：</string>
    <string name="regist_pass">密码：</string>
    <string name="regist_rep">确认密码：</string>
    <string name="regist_authcode">验证码：</string>
    <string name="regist_get_authcode">获得验证码</string>
    <string name="enter_date">入住时间</string>
    <string name="out_date">离店时间</string>
    <string name="citylist_title">城市列表</string>
    <string name="reservation_room_num">房间数量：</string>
    <string name="reservation_date">住房时间：</string>
    <string name="reservation_price">应付金额：</string>
    <string name="reservation_name">您的姓名：</string>
    <string name="reservation_phone">您的手机：</string>
    <string name="reservation_tips">温馨提示</string>
    <string name="reservation_tip_text">酒店的入住时间为入住当日的14:00,离店时间为离店当日的12:00.如果提前入住或推迟离店,均需加收一定费用,详情咨询酒店前台</string>
    <string name="reservation_erro_num">入住房间数不能够为空</string>
    <string name="reservation_erro_date">请选择入住时间</string>
    <string name="reservation_erro_name">请填写入住人姓名</string>
    <string name="reservation_erro_phone">请填写入住人手机号码</string>
     <string name="reservation_erro_phone_er">请填写正确的手机号码</string>
     <string name="about_us">关于我们</string>
     <string name="changepwd_old">旧密码：</string>
     <string name="changepwd_new">新密码：</string>
     <string name="changepwd_again">密码：</string>
     <string name="changepwd_old_hint">请输入旧密码</string>
     <string name="changepwd_new_hint">请输入新密码</string>
     <string name="changepwd_again_hint">请再次输入新密码</string>
     <string name="hotel_gallery">酒店相册</string>
     <string name="reservation_detai_checkin">入住时间：</string>
     <string name="reservation_detai_checkout">离店时间：</string>
     <string name="reservation_detai_orderid">订单编号：</string>
     <string name="reservation_detail_title">订单详情</string>

    <!--  -->

    <string name="fragment_package">com.hhinns.main.ui</string>
    <string name="favorable_info_specil">特价</string>
    <string name="member_center_info">我的资料</string>
    <string name="member_center_order">我的订单</string>
    <string name="member_center_collection">我的收藏</string>
    <string name="member_center_invite">邀请好友</string>
    <string name="member_center_title">会员中心</string>
    <string name="myinfo_name">您的姓名:</string>
    <string name="myinfo_phone">您的手机:</string>
    <string name="myinfo_address">您的地址:</string>
    <string name="myinfo_emall">您的邮箱:</string>
    <string name="myinfo_sex">您的性别:</string>
    <string name="recommendation_title">精品推荐</string>
    <string name="favorable_info_special">今日特价</string>
    <string name="setting_update">软件升级</string>
    <string name="setting_find">找回密码</string>
    <string name="setting_changaccount">切换帐号</string>
    <string name="setting_changpwd">修改密码</string>
    <string name="setting_exitapp">退出软件</string>
    <string name="time_format_S">MM月dd日HH时mm分ss秒SSS</string>
    <string name="time_format_s">MM月dd日HH时mm分ss秒</string>
    <string name="create_time">创建时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="message_s">消息：</string>
    <string name="request_s">请求：</string>
    <string name="response_s">响应：</string>
    <string name="netwok_package_size">网络包大小：</string>
    <string name="time_s">时间：</string>
    <string name="use_cpu">当前进程所占cpu：</string>
    <string name="total_memory">总内存:</string>
    <string name="free_memory">空闲内存:</string>
    <string name="is_low_memory">是否处于低内存状态：</string>
    <string name="trans_speed">传输速率:</string>
    <string name="wake_time">唤醒时间:</string>
    <string name="last_second_trans_speed">上一秒传输速率:</string>
    <string name="limit_speed">限定速率:</string>
    <string name="progress_id">进程ID：</string>
    <string name="progress_name">进程名：</string>
    <string name="progress_memory">进程占用内存：</string>
    <string name="network_unwork">请检查网络连接是否正常</string>
    <string name="in_date">入住日期</string>
    <string name="Mon">周一</string>
    <string name="Tue">周二</string>
    <string name="Wed">周三</string>
    <string name="Thu">周四</string>
    <string name="Fri">周五</string>
    <string name="Sat">周六</string>
    <string name="Sun">周日</string>
    <string name="collection_delet">编辑</string>
    <string name="collection_complete">完成</string>
    <string name="room_home">房间</string>
     <string name="room_info">简介</string>
      <string name="room_near">周边</string>
       <string name="room_line">地图</string>
    
    <!--  -->
    <string name="app_id">sxjd20141219</string>
    <string name="checkupdate.api.url">http://www.iyishang.cn/api/update/?apptype=0&#38;appid=%s</string>
    <string name="checkupdate.build.title">版本检测</string>
    <string name="checkupdate.content">更新内容:%s</string>
    <string name="checkupdate.content.empty">未填写</string>
    <string name="checkupdate.unavaiable.update.msg">已是最新版本，无需更新！</string>
    <string name="checkupdate.button.confirm">确定</string>
    <string name="checkupdate.button.cancel">取消</string>
    <string name="checkupdate.alert.builder.install.title">安装提醒</string>
    <string name="checkupdate.alert.builder.install.msg">下载已完成，确定安装吗？</string>
    <string name="checkupdate.progress.dialog.title">应用下载</string>
    <string name="checkupdate.cancel.downloading">取消下载</string>
    <string name="checkupdate.connection.timeout.msg">链接超时！</string>
    <string name="checkupdate.network.unavailable.msg">网络不可用！</string>
    <string name="checkupdate.error.msg">出错啦！</string>
    <string name="checkupdate.download.failure">抱歉，下载过程出错！</string>
    <string name="cancel_order">取消订单</string>
    <!--  -->

</resources>