<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bg"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/icon_aboutus_n"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/icon_bg_inpu"
            android:layout_marginRight="5dp"
            android:paddingTop="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                     android:gravity="center_vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_uname"
                    android:textSize="16.0sp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:hint="@string/login_uname_hint"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
             <View 
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/icon_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_pass"
                       android:textSize="16.0sp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:password="true"
                      android:background="@null"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_red"
            android:text="@string/confirm"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>