<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bg"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_bg_inpu"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="旧  密  码:"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etOldPwd"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                      android:password="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/changepwd_old_hint"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="新  密  码:"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etNewPwd"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:hint="@string/changepwd_new_hint"
                    android:background="@drawable/bg_et"
                    android:textColor="@color/black"
                    android:password="true"
                    android:textSize="14sp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="确认密码:"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etAgainPwd"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                      android:password="true"
                    android:hint="@string/changepwd_again_hint"
                    android:background="@drawable/bg_et"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_red"
            android:text="@string/confirm"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>