<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bg"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgBanner"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/enterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/outDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/enterDate"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="0家"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/tvCount"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgTab"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btnDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/hotel_default"
            android:textColor="@color/tab_txtcolor"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/icon_vdash" />

        <RadioButton
            android:id="@+id/btnPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/hotel_price"
            android:textColor="@color/tab_txtcolor"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/icon_vdash" />

        <RadioButton
            android:id="@+id/btnDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/hotel_distance"
            android:textColor="@color/tab_txtcolor"
            android:textSize="16sp" />
    </RadioGroup>

    <ListView
        android:id="@+id/listView"
        style="@style/ListViewNormalStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/solid_line"
        android:listSelector="@drawable/item_selector" >
    </ListView>

</LinearLayout>